src/test/deca/context/invalid/method_int_return_float.deca
/*
    Description : méthode ayant int comme type de retour et retournant un float

    Résultat : Erreur contextuelle (règle 3.28 assign_compatible)
*/
class A{
    int x(){
        float e = 5.5;
        return e;
    }
}
